Add: include in path

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {},
+  "bin": {
+    "ai": "./ai.mjs"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
