--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
-    "openai": "^3.3.0",
-    "ora": "^6.3.1"
+    "openai": "^4.2.0"
   }
 }
