--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "openai": "^4.11.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4"
   }
 }
