--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "chalk": "^5.3.0",
     "commander": "^13.1.0",
     "openai": "^4.11.1"
