--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ai-cli",
+  "name": "llm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "vitest run"
-  },
   "bin": {
-    "ai": "./ai.mjs"
+    "llm": "./llm.mjs"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +16,6 @@
     "openai": "^5.0.1"
   },
   "devDependencies": {
-    "prettier": "^3.2.4",
-    "vitest": "^3.2.4"
+    "prettier": "^3.2.4"
   }
 }
