--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "llm": "./llm.mjs"
+    "llm": "./llm.mjs",
+    "llm2": "./dist/main.js"
+  },
+  "scripts": {
+    "format": "prettier --write .",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +18,11 @@
     "@anthropic-ai/sdk": "^0.57.0",
     "chalk": "^5.3.0",
     "commander": "^14.0.0",
-    "openai": "^5.0.1"
+    "openai": "^5.0.1",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/node": "^24.2.1",
     "prettier": "^3.2.4"
   }
 }
