--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "target": "ESNext",
     // For nodejs:
     "lib": ["ESnext"],
-    "types": ["node"],
+    "types": ["Node"],
     "esModuleInterop": true,
 
     // Other Outputs
@@ -25,8 +25,8 @@
     // Style Options
     // "noImplicitReturns": true,
     // "noImplicitOverride": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     // "noFallthroughCasesInSwitch": true,
     // "noPropertyAccessFromIndexSignature": true,
 
